# 2324-space-sprint-project-planex

./: .gitattributes  .gitignore  BUILD.md  LICENSE  README.md  SECURITY.md  TECH STACK.txt  package-lock.json  package.json  planex.fig
Sandbox/: CMakeLists.txt  main.cpp
Test/Test/: Test.cpp  Test.vcxproj
app/: forge.config.ts  package-lock.json  package.json
app/core/: Tcp.ts  main.ts  preload.ts
app/renderer/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs  tsconfig.info.json  tsconfig.json  tsconfig.react.json  tsconfig.solid.json
client/: .gitignore  client.sln
client/client/: Source.cpp  client.cpp  client.hpp  client.vcxproj  client.vcxproj.filters
desktop/: forge.config.ts  package-lock.json  package.json  tsconfig.json
doc/: Doxyfile  planex.docx  planex.pptx
doc/html/: annotated.html  class_matrix_1_1_matrix3x4-members.html  class_matrix_1_1_matrix3x4.html  class_object-members.html  class_object.html  class_particle_1_1_particle-members.html  class_particle_1_1_particle.html  class_quanterion_1_1_vec4-members.html  class_quanterion_1_1_vec4.html  class_scene-members.html  class_scene.html  class_utils_1_1_memory-members.html  class_utils_1_1_memory.html  class_vector_1_1_vec3-members.html  class_vector_1_1_vec3.html  classes.html  client_8cpp.html  config_8hpp.html  config_8hpp_source.html  dir_004b5816ff5621f76b13ba5f44391b1e.html  dir_9695812ac4b411cd3500dfec4fe1c235.html  doxygen_crawl.html  (+41 more)
server/: package-lock.json  package.json  server.js
solar-physics/: .gitignore  solar-physics.sln
test-env/: Test.sln
(+216 files in other folders)
